2009-12-17  Andreas Schwab  <schwab@linux-m68k.org>

	* emacs-lisp/autoload.el (batch-update-autoloads): Only exclude
	unconditionally preloaded files.

2009-12-16  Juri Linkov  <juri@jurta.org>

	Revert to old 23.1 logic of using the file at the mark as default.
	* dired-aux.el (dired-diff): Use the file at the mark as default
	if it's not the same as the current file, and the target dir is
	the current dir or the mark is active.  Add the current file
	as the arg of `dired-dwim-target-defaults'.  Use the default file
	in the prompt.  (Bug#5225)

2009-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-echo-mark-marker-length): New defconst.
	(tramp-echo-mark, tramp-echoed-echo-mark-regexp): Use it.
	(tramp-check-for-regexp): Check also, when an echoing shell stops
	to echo sent commands.

2009-12-14  Chong Yidong  <cyd@stupidchicken.com>

	* Makefile.in: Revert last change (Bug#5191).

2009-12-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-print-log): Fix argument order.
	(vc-hg-working-revision): Make sure the command is executed in a
	known environment so that we can parse the output.  (Bug#4417)

2009-12-14  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/python.el (python-symbol-completions): Remove text
	properties from symbol string before calling python-send-receive.

2009-12-14  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-frame-handler): Only set gud-lat-frame
	when there are values for both file and line. (Bug#5060)

2009-12-14  Juri Linkov  <juri@jurta.org>

	* ediff-ptch.el (ediff-context-diff-label-regexp): Don't match
	whitespace after the file name of the first line of unified format,
	because git-diff doesn't output whitespace and file modification time
	after the file name.

2009-12-14  David Kastrup  <dak@gnu.org>

	* info.el (Info-hide-cookies-node): Before hiding a cookie,
	check if it already has the `display' property added by