@@ -1,3 +1,10 @@
+2009-12-17  Juri Linkov  <juri@jurta.org>
+
+	Make `dired-diff' more safe.  (Bug#5225)
+
+	* dired-aux.el (dired-diff): Signal an error when `file' equals to
+	`current' or when `file' is a directory of the `current' file.
+
 2009-12-17  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* emacs-lisp/autoload.el (batch-update-autoloads): Only exclude
